--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,7 @@
 [TELEGRAM]
 ACCESS_TOKEN = 6110198262:AAFYdAKaog0ciWWyPO6MmP15RDpx1jl9q_g
+
+[REDIS]
+HOST = redis-13749.c54.ap-northeast-1-2.ec2.cloud.redislabs.com
+PASSWORD = vy7QLiJnNCwlIKyV8h8LbVDZ4opXwGIS
+REDISPORT = 13749
